update file atlas search to a better search with improved ngram and tokenizer configurations. Update pagination to cursor approach with file fetching for better performance with long file results